# wasmrun

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  test  test_output_current
.github/workflows/: ci.yml
ci/: build_wabt.sh  get_wasmtime.sh
crates/libwasmrun/: Cargo.toml
crates/libwasmrun/src/: borrow.rs  collections.rs  const_eval.rs  exec.rs  export.rs  frame.rs  fun.rs  heap.rs  lib.rs  macros.rs  mem.rs  module.rs  spectest.rs  stack.rs  store.rs  type_canonicalizer.rs  types.rs  value.rs  wasi.rs
crates/libwasmrun/src/exec/: frame.rs  simd.rs  stack.rs  store.rs  subtyping.rs  value.rs
crates/libwasmrun/src/store/: table.rs
crates/libwasmrun/src/wasi/: ctx.rs  file.rs  mod.rs
crates/libwasmrun/tests/: host_import.rs
crates/libwasmrun_parse/: Cargo.toml
crates/libwasmrun_parse/exec/: lexer_test.rs  parser_test.rs
crates/libwasmrun_parse/src/: ast.rs  instr.rs  lexer.rs  lib.rs  parser.lalrpop
crates/libwasmrun_parse_macros/: Cargo.toml
crates/libwasmrun_parse_macros/src/: lib.rs  syntax.rs  tree.rs
crates/libwasmrun_syntax/: Cargo.toml  README.md
crates/libwasmrun_syntax/src/: export_entry.rs  func.rs  global_entry.rs  import_entry.rs  index_map.rs  io.rs  lib.rs  module.rs  name_section.rs  ops.rs  primitives.rs  reloc_section.rs  section.rs  segment.rs  table.rs  types.rs
crates/libwasmrun_syntax/src/builder/: code.rs  data.rs  export.rs  global.rs  import.rs  invoke.rs  memory.rs  misc.rs  mod.rs  module.rs  table.rs
crates/libwasmrun_syntax/src/elements/: export_entry.rs  func.rs  global_entry.rs  import_entry.rs  index_map.rs  mod.rs  module.rs  name_section.rs  ops.rs  primitives.rs  reloc_section.rs  section.rs  segment.rs  types.rs
crates/libwasmrun_wast/: Cargo.toml
crates/libwasmrun_wast/src/: lib.rs
crates/spec-test/: Cargo.toml
crates/spec-test/src/: cli.rs  main.rs  spec.rs
crates/w4wr/: Cargo.toml
crates/w4wr/src/: main.rs
crates/wasi-test/: Cargo.toml
crates/wasi-test/src/: cli.rs  cmd.rs  main.rs
crates/wasmrun/: Cargo.toml
crates/wasmrun/src/: cli.rs  main.rs
src/: cli.rs  exec.rs  main.rs  parser.rs
src/exec/: const_expr.rs  frame.rs  stack.rs  store.rs  value.rs
src/parser/: internal.rs  types.rs  wast.rs
src/parser/wast/: parser.rs
tests/: build.sh  spec.wast
tests/wasi/: Cargo.toml
tests/wasi/src/: args.rs  environ1.out  environ1.rs  file1.rs
