[package]
name = "libwasmrun"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
fxhash = "0.2"
ieee754 = "0.2"
log = "0.4"

[dependencies.parity-wasm]
git = "https://github.com/osa1/parity-wasm"
branch = "wasmrun"
features = ["multi_value", "atomics", "simd", "sign_ext", "bulk"]

[dependencies.wasi-common]
git = "https://github.com/bytecodealliance/wasmtime.git"
rev = "76998f0404d83f1c303887c5fd207e14a07dcf4c"

[dependencies.wiggle]
git = "https://github.com/bytecodealliance/wasmtime.git"
rev = "76998f0404d83f1c303887c5fd207e14a07dcf4c"

[dev-dependencies]
wabt = { git = "https://github.com/pepyakin/wabt-rs.git" }
