[package]
name = "libwasmrun"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
fxhash = "0.2"
ieee754 = "0.2"
log = "0.4"
libwasmrun_syntax = { path = "../libwasmrun_syntax" }

[dependencies.wasi-common]
git = "https://github.com/bytecodealliance/wasmtime.git"
rev = "2964023a7"

[dependencies.wiggle]
git = "https://github.com/bytecodealliance/wasmtime.git"
rev = "2964023a7"

[dependencies.wiggle-borrow]
git = "https://github.com/bytecodealliance/wasmtime.git"
rev = "2964023a7"

[dev-dependencies]
wabt = { git = "https://github.com/pepyakin/wabt-rs.git" }
