[package]
name = "spec-test"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
libwasmrun = { path = "../libwasmrun" }
parity-wasm = { version = "0.42", features = ["multi_value", "atomics", "simd", "sign_ext", "bulk"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
rustc_tools_util = "0.2.0"
