[package]
name = "spec-test"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
clap = "2.33"
fxhash = "0.2"
libwasmrun = { path = "../libwasmrun" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.parity-wasm]
git = "https://github.com/osa1/parity-wasm"
rev = "99253fb"

[build-dependencies]
rustc_tools_util = "0.2"
