[package]
name = "spec-test"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
clap = "2.33"
fxhash = "0.2"
libwasmrun = { path = "../libwasmrun" }
libwasmrun_syntax = { path = "../libwasmrun_syntax" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Switch to version 71 when it's released.
wast = { git = "https://github.com/bytecodealliance/wasm-tools.git", rev = "3195c4b" }

[build-dependencies]
rustc_tools_util = "0.2"
