[package]
name = "wasi-test"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
libwasmrun = { path = "../libwasmrun" }
nix = "0.19"
pretty_env_logger = "0.4"

[dependencies.parity-wasm]
git = "https://github.com/osa1/parity-wasm"
branch = "wasmrun"
features = ["multi_value", "atomics", "simd", "sign_ext", "bulk"]

[build-dependencies]
rustc_tools_util = "0.2"
