[package]
name = "wasi-test"
version = "0.1.0"
authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
fxhash = "0.2"
libwasmrun = { path = "../libwasmrun" }
libwasmrun_syntax = { path = "../libwasmrun_syntax" }
nix = "0.20"
pretty_env_logger = "0.4"

[build-dependencies]
rustc_tools_util = "0.2"
